fixed error message spacing

--- a/client/src/views/SignUp/SignUp.less
+++ b/client/src/views/SignUp/SignUp.less
@@ -87,7 +87,8 @@
   color: red;
   font-size: 0.8em;
   height: 20px;
-  margin-bottom: 35px;
+  display: inline-block;
+  padding: 5px;
   text-align: left;
   width: 200px;
   margin-left: auto;
